--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,45 @@
 appdirs==1.4.3
 argh==0.26.2
+astroid==2.3.0
 attrs==19.1.0
+autopep8==1.4.4
 backcall==0.1.0
 black==19.3b0
 blinker==1.4
 Click==7.0
 decorator==4.4.0
+entrypoints==0.3
+flake8==3.7.8
 Flask==1.1.1
 flask-shell-ipython==0.4.1
 ipython==7.8.0
 ipython-genutils==0.2.0
+isort==4.3.21
 itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.1
+lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 parso==0.5.1
 pathtools==0.1.2
 pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 Pygments==2.4.2
+pylint==2.4.1
 python-dotenv==0.10.3
 PyYAML==5.1.2
 simplejson==3.16.0
 six==1.12.0
 toml==0.10.0
 traitlets==4.3.2
+typed-ast==1.4.0
 watchdog==0.9.0
 wcwidth==0.1.7
 Werkzeug==0.16.0
+wrapt==1.11.2
+yapf==0.28.0
