--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
-    "jshint": "^2.10.2"
+    "jshint": "^2.10.2",
+    "sass-lint": "^1.13.1"
   }
 }
