--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "eslint": "^6.5.1",
     "gulp": "^4.0.2",
     "gulp-cache": "^1.1.3",
     "gulp-notify": "^3.2.0",
