--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "gulp-sass": "^4.0.2",
     "jshint": "^2.10.2",
     "sass-lint": "^1.13.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0"
   }
 }
